<resources>
    <string name="app_name">My Student Portal</string>
    <string name="login_or">or</string>
    <string name="login_button_login">Login</string>
    <string name="login_create_account">Create Account</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="create_account_Name_hint">Full Name</string>
    <string name="create_account_Email_hint">Email</string>
    <string name="create_account_password">Password</string>
    <string name="create_account_studentID">Student ID</string>
    <string name="create_account_saveButton">Create Account</string>
    <string name="Sign_out">Sign out</string>
    <string name="menu_title">Add Book</string>
    <string name="book_sale_list_empty">No Books To Show</string>
    <string name="book_sale_author">By Nora Barrett</string>
    <string name="book_sale_card_seller">Selling by: </string>
    <string name="book_sale_card_name">Seller Name</string>
    <string name="book_sale_dateOfPost">Date Posted</string>
    <string name="book_sale_contact">Contact Seller</string>
    <string name="post_book_title">Title</string>
    <string name="post_book_author">Author</string>
    <string name="post_book_description">Description</string>
    <string name="post_book_seller_name">Seller Name</string>
    <string name="post_book_saveButton">Save</string>
    <string name="launcher_welcome">Welcome</string>
    <string name="launcher_app_name">My Student Portal</string>
    <string name="launcher_button_get_started">Get Started</string>
    <string name="post_book_timestamp">Today</string>
    <string name="Search">Search</string>
    <string name="book_sale_title">The King Of Drugs</string>
    <string name="library_card_edition">Edition</string>
    <string name="library_card_author">Author</string>
    <string name="messages_no_chats">No Chat To Show</string>
    <string name="message_card_username">Username</string>
    <string name="dashboard_button_moodle">Moodle</string>
    <string name="dashboard_button_timetable">Timetable</string>
    <string name="dashboard_button_floor">Floor Plan</string>
    <string name="dashboard_button_library">Library</string>
    <string name="dashboard_button_book_sale">Book Sale</string>
    <string name="dashboard_button_forum">Forum</string>
    <string name="dashboard_button_activities">Activities</string>
    <string name="dashboard_button_mymessages">MyMessages</string>
    <string name="dashboard_button_about_us">About Us</string>
    <string name="dashboard_button_contact_us">Contac Us</string>

</resources>