<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".views.CreateAccountActivity">

    <ProgressBar
        android:id="@+id/createAccountProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/createAccountStudentId"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/create_account_studentID"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/createAccountName"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/create_account_Name_hint"
            android:inputType="textPersonName"/>


        <EditText
            android:id="@+id/createAccountEmail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/create_account_Email_hint"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/createAccountPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/create_account_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/create_account_saveButton"/>
    </LinearLayout>
</LinearLayout>